--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <canvas id = "gameCanvas" width = "400" height = "400"></canvas>
+        <p>WASD and arrow keys to control respective players. Use S and down arrow to shoot. Colored zones are protection, only last temporarily. 3 lives each.</p>
         <script src = "gof.js"></script>
     </body>
 </html>
